--- a/templates/main.html
+++ b/templates/main.html
@@ -1,8 +1,12 @@
+{% load static %}
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>StudyBug</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" media="screen"
+          href="{% static 'styles/main.css' %}">
+    <title>StudyBud</title>
 </head>
 <body>
 {% include 'navbar.html' %}
