--- a/templates/main.html
+++ b/templates/main.html
@@ -2,13 +2,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" media="screen"
-          href="{% static 'styles/main.css' %}">
-    <title>StudyBud</title>
+    <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link rel="shortcut icon" href="{% static 'assets/favicon.ico' %}"
+          type="image/x-icon"/>
+    <link rel="stylesheet" href="{% static 'styles/style.css' %}"/>
+    <title>StudyBuddy - Find study partners around the world!</title>
 </head>
+
 <body>
+
 {% include 'navbar.html' %}
 {% if messages %}
     <ul class="messages">
@@ -18,6 +22,8 @@
         {% endfor %}
     </ul>
 {% endif %}
-{% block content %}{% endblock %}
+{% block content %}
+{% endblock %}
+    <script src="{% static 'js/script.js' %}"></script>
 </body>
 </html>
